force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Invoicing_Attributes_Other_Temp__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Attributes_Other_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <inlineHelpText>Describe the Invoicing Attribute not included in the List for 1 thru 12</inlineHelpText>
    <label>Invoicing Attributes Other - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>