force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Invoicing_Frequency_Temp__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Frequency_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Invoicing Frequency - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>