force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Lace_Pull_on_Slip_on_Temp__c.field-meta.xml
<CustomField>
    <fullName>Lace_Pull_on_Slip_on_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Lace/Pull-on/Slip-on - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOA-L</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>