force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Leather_Type_Temp__c.field-meta.xml
<CustomField>
    <fullName>Leather_Type_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Leather Type - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrasion resistant mono-mesh</fullName>
            </value>
            <value>
                <fullName>Abrasion resistant NYLON</fullName>
            </value>
            <value>
                <fullName>Air mesh nylon</fullName>
            </value>
            <value>
                <fullName>Bison Taos Leather</fullName>
            </value>
            <value>
                <fullName>BLACK</fullName>
            </value>
            <value>
                <fullName>Black Chaparrel Leather</fullName>
            </value>
            <value>
                <fullName>BLACK CHROME</fullName>
            </value>
            <value>
                <fullName>BLACK EDGEWATER</fullName>
            </value>
            <value>
                <fullName>BLACK ENDURA LEATHER</fullName>
            </value>
            <value>
                <fullName>Black Fortitude</fullName>
            </value>
            <value>
                <fullName>Black leather</fullName>
            </value>
            <value>
                <fullName>Black Mesa Leather</fullName>
            </value>
            <value>
                <fullName>BLACK NATURE SOFT</fullName>
            </value>
            <value>
                <fullName>Black rubber</fullName>
            </value>
            <value>
                <fullName>Black Scout</fullName>
            </value>
            <value>
                <fullName>BLACK STAR</fullName>
            </value>
            <value>
                <fullName>BLACK STAR LEATHER</fullName>
            </value>
            <value>
                <fullName>BLACK TURBO VEGAS LEATHER</fullName>
            </value>
            <value>
                <fullName>Black Voyageur</fullName>
            </value>
            <value>
                <fullName>BLACK Yukon</fullName>
            </value>
            <value>
                <fullName>BLACK YUKON LEATHER</fullName>
            </value>
            <value>
                <fullName>Briar Turbo Vegas</fullName>
            </value>
            <value>
                <fullName>BROWN</fullName>
            </value>
            <value>
                <fullName>BROWN AKIBA</fullName>
            </value>
            <value>
                <fullName>Brown Boomer</fullName>
            </value>
            <value>
                <fullName>Brown Chrome</fullName>
            </value>
            <value>
                <fullName>BROWN CORDURA</fullName>
            </value>
            <value>
                <fullName>Brown Leather</fullName>
            </value>
            <value>
                <fullName>Brown Overtime Leather</fullName>
            </value>
            <value>
                <fullName>Brown Taos Leather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>