force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Monthly_What_Day_Temp__c.field-meta.xml
<CustomField>
    <fullName>Monthly_What_Day_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <inlineHelpText>1-31 or 1st ,2nd,3rd,4th, last week Monday thru Sunday</inlineHelpText>
    <label>Monthly:What Day? - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>