force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/MT_Int_Metatarsal_Interior_Temp__c.field-meta.xml
<CustomField>
    <fullName>MT_Int_Metatarsal_Interior_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>MT Int-Metatarsal-Interior - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>