force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Number_of_Pairs_Allowed_Temp__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pairs_Allowed_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Number of Pairs Allowed - Temp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>