force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Oil_Gas_Rating_temp__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gas_Rating_temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Oil/Gas Rating - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Better_Best</valueSetName>
    </valueSet>
</CustomField>