force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Othe_Group_by_Temp__c.field-meta.xml
<CustomField>
    <fullName>Othe_Group_by_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <inlineHelpText>Describe the Discrepancy for Group By</inlineHelpText>
    <label>Other Group by - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>