force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Other_Invoice_By_Temp__c.field-meta.xml
<CustomField>
    <fullName>Other_Invoice_By_Temp__c</fullName>
    <description>Temp IA 2.0 Conversion</description>
    <label>Other Invoice By - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>