force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Payment_Method_Temp__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Payment Method - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>