force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Payment_Terms_Exceptions_Notes_Temp__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Exceptions_Notes_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Payment Terms Exceptions Notes - Temp</label>
    <type>TextArea</type>
</CustomField>