force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Payment_Terms_Temp__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Payment Terms - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 20</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Not on List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>