force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/PR_Puncture_Resistant_Temp__c.field-meta.xml
<CustomField>
    <fullName>PR_Puncture_Resistant_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>PR-Puncture-Resistant - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>