force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Price_Discount_temp__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount_temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Price Discount - temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>