force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Pricing_End_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Pricing_End_Date_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Pricing End Date - Temp</label>
    <type>Date</type>
</CustomField>