force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Pricing_Start_Date_temp__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Start_Date_temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Pricing Start Date - temp</label>
    <type>Date</type>
</CustomField>