force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Program_Conversion_Notes_Temp__c.field-meta.xml
<CustomField>
    <fullName>Program_Conversion_Notes_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Program Conversion Notes - Temp</label>
    <type>TextArea</type>
</CustomField>