force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Program_Name_New_Temp__c.field-meta.xml
<CustomField>
    <fullName>Program_Name_New_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Program Name (New) - Temp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>