force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Safety_Toe_Temp__c.field-meta.xml
<CustomField>
    <fullName>Safety_Toe_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Safety Toe - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>SOFT</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>