force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Shank_Temp__c.field-meta.xml
<CustomField>
    <fullName>Shank_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Shank - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIBERGLASS</fullName>
            </value>
            <value>
                <fullName>H-TECH STABILIZER</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NON-METALLIC</fullName>
            </value>
            <value>
                <fullName>NYLON</fullName>
            </value>
            <value>
                <fullName>STEEL</fullName>
            </value>
            <value>
                <fullName>STEEL/LINEMAN</fullName>
            </value>
            <value>
                <fullName>TC-TECH</fullName>
            </value>
            <value>
                <fullName>TPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>