force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Signed_Agreement_on_File_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Signed_Agreement_on_File_Date_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Signed Agreement on File Date - Temp</label>
    <type>Date</type>
</CustomField>