force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Soft_Toe_Temp__c.field-meta.xml
<CustomField>
    <fullName>Soft_Toe_Temp__c</fullName>
    <description>IA 2.0 Conversion</description>
    <label>Soft Toe - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>