force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Sole_Temp__c.field-meta.xml
<CustomField>
    <fullName>Sole_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Sole - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#N/A</fullName>
            </value>
            <value>
                <fullName>#REF!</fullName>
            </value>
            <value>
                <fullName>Aztec SuperSole® 2.0</fullName>
            </value>
            <value>
                <fullName>Bid Rubber Cup</fullName>
            </value>
            <value>
                <fullName>Black Cushion Crepe Wedge</fullName>
            </value>
            <value>
                <fullName>Chevron SuperSole®</fullName>
            </value>
            <value>
                <fullName>Chore</fullName>
            </value>
            <value>
                <fullName>Dante</fullName>
            </value>
            <value>
                <fullName>Decathlon</fullName>
            </value>
            <value>
                <fullName>Diamond Back SuperSole®</fullName>
            </value>
            <value>
                <fullName>Diamond Lug SuperSole®</fullName>
            </value>
            <value>
                <fullName>Direct Attach StarGrip®</fullName>
            </value>
            <value>
                <fullName>Dual Density Mini Lug II</fullName>
            </value>
            <value>
                <fullName>Dual Density PU Tri Tred</fullName>
            </value>
            <value>
                <fullName>Dual Density PU V-Grip</fullName>
            </value>
            <value>
                <fullName>Dual Density TPU/PU Galaxy</fullName>
            </value>
            <value>
                <fullName>ENDURANCE Arrowhead</fullName>
            </value>
            <value>
                <fullName>ENDURANCE Arrowhead - Black</fullName>
            </value>
            <value>
                <fullName>ENDURANCE Cross Wire</fullName>
            </value>
            <value>
                <fullName>EXTENSITY RUBBER</fullName>
            </value>
            <value>
                <fullName>Extensity rubber - red</fullName>
            </value>
            <value>
                <fullName>Flathead Bob sole</fullName>
            </value>
            <value>
                <fullName>Forager (Black)</fullName>
            </value>
            <value>
                <fullName>Forager (Brown)</fullName>
            </value>
            <value>
                <fullName>GRIP-TEC</fullName>
            </value>
            <value>
                <fullName>GUM RUBBER</fullName>
            </value>
            <value>
                <fullName>Horizon DL Supersole</fullName>
            </value>
            <value>
                <fullName>Mini Lug RBR</fullName>
            </value>
            <value>
                <fullName>Mini Lug SuperSole®</fullName>
            </value>
            <value>
                <fullName>Mini Lug Supersole - black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>