force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Subsidy_Percentage_Temp__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Percentage_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Subsidy Percentage - Temp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>