force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Tax_Exemption_Expire_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Expire_Date_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Tax Exemption Expire Date - Temp</label>
    <type>Date</type>
</CustomField>