force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Tread_Pattern_Rating_Temp__c.field-meta.xml
<CustomField>
    <fullName>Tread_Pattern_Rating_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Tread Pattern Rating - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Non-Aggressive</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>