force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Weekly_What_Day_Temp__c.field-meta.xml
<CustomField>
    <fullName>Weekly_What_Day_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Weekly:What Day? - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>